# LockWise

./: .gitmodules  README.md
.github/workflows/: deploy-docs.yml
app/: .env.example  .gitignore  README.md  flutter_launcher_icons.yaml  pubspec.yaml
app/android/app/: build.gradle.kts
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: LocalService.dart  PaginaBoasVindas.dart  PaginaCadastro.dart  PaginaChave.dart  PaginaConfig.dart  PaginaConta.dart  PaginaConvite.dart  PaginaDetalhe.dart  PaginaEsqueci.dart  PaginaInicial.dart  PaginaLogin.dart  PaginaNotificação.dart  PaginaNovaSenha.dart  PaginaSobre.dart  PaginaTemporaria.dart  database.dart  home.dart  lock_details.dart  login.dart  main.dart
app/linux/: CMakeLists.txt
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  constraints.txt  docker-compose.yml  requirements.txt  speechbrain_service.py
backend/src/: device.rs  invite.rs  main.rs  mqtt.rs  user.rs
docs/: Backend.md  Embedded.md  História.md  Infraestrutura.md  Introdução.md  README.md
embedded/: .clang-format  .gitignore  Doxyfile  README.md  partitions.csv  sdkconfig.defaults
embedded/docs/: mainpage.md
embedded/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
embedded/voice_lock_system/: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  build.sh  partitions.csv  sdkconfig.defaults
embedded/voice_lock_system/main/: CMakeLists.txt  Kconfig.projbuild  voice_lock_main.c
embedded/voice_lock_system/main/include/: audio.h  audio_stream.h  bluetooth.h  config.h  http.h  lock.h  mqtt.h  serial.h  wifi.h
embedded/voice_lock_system/main/src/: audio.c  audio_stream.c  bluetooth.c  config.c  http.c  lock.c  main.c  mqtt.c  serial.c  system_utils.c  wifi.c
(+38 files in other folders)
