[package]
name = "backend"
version = "0.1.0"
edition = "2024"
default-run = "backend"

[[bin]]
name = "backend"
path = "src/main.rs"

[[bin]]
name = "add_passphrase"
path = "src/bin/add_passphrase.rs"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rumqttc = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "chrono", "uuid", "tls-rustls"] }
dotenv = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
url = "2.0"
argon2 = "0.5"
serde_json = "1.0"
firebase-auth = "0.5.1"
reqwest = { version = "0.12.25", features = ["json"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
base64 = "0.22"
